# avtocod

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  README.md  codecov.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  run_integration_tests.yml
avtocod/: __init__.py  avtocod.py  consts.py  exceptions.py  mixins.py  pipeline.py  utils.py
avtocod/methods/: __init__.py  authorization.py  base.py  create_report.py  get_balance.py  get_report.py  get_reports.py  get_reports_list.py  get_token.py  multirequest.py  order_repair.py  upgrade_report.py
avtocod/session/: aiohttp.py  base.py
avtocod/session/middlewares/: base.py  relogin.py  request_logging.py
avtocod/types/: __init__.py  base.py  reusable.py
avtocod/types/profile/: __init__.py  profile.py  token.py
avtocod/types/report/: __init__.py  generation.py  report.py  reports.py  short_information.py
avtocod/types/report/report_entities/: accidents.py  additional_info.py  calculate.py  fines.py  gots_action.py  identifiers.py  last_generation_stat.py  market_price.py  metadata.py  mileages.py  owner.py  photos.py  query.py  registration_actions.py  restrictions.py  state.py  stealings.py  tech_data.py  utilization.py
avtocod/types/review/: __init__.py  generation.py  identifiers.py  query_type.py  review.py  reviews_list.py  short_information.py  tech_data.py
avtocod/types/review/reviews_entity/: accidents.py  additional_info.py  calculate.py  fines.py  gots_action.py  market_price.py  metadata.py  mileages.py  owner.py  photos.py  query.py  registration_actions.py  restrictions.py  state.py  stealings.py  tech_data.py
avtocod/utils/: __init__.py  generators.py  utils.py
examples/: create_report.py  disable_logging.py  example.py  iter_reports.py  logging_middleware.py  pipeline.py  relogin.py  upgrade_report.py
tests/: conftest.py  mocked_api.py  settings.py
tests/integration/: conftest.py  reports.txt
tests/integration/test_api/: test_integration_get_account_info.py  test_integration_get_report.py  test_integration_get_reports.py  test_integration_get_token.py  test_integration_pipeline.py
tests/unit/: __init__.py  conftest.py
tests/unit/test_api/test_methods/: test_authorization.py  test_create_report.py  test_get_balance.py  test_get_report.py  test_get_reports.py  test_get_token.py  test_multirequest.py  test_order_repair.py  test_upgrade_report.py
tests/unit/test_utils/: test_generators.py
